fix pause bug, add collision cooldown, increase time resolution of stuckPuckMetrics, add popup for portrait orientation, first click plays bgm

--- a/client/style.css
+++ b/client/style.css
@@ -169,7 +169,7 @@ body {
     align-items: center;
     gap: 1vw; /* TODO: handle for portrait */
     /*font-family: system-ui;*/
-    font-size: 1.5em;
+    font-size: 4vmin;
     font-weight: 100;
     color: hsl(0, 0%, 100%, 0.25);
 
